@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.dmd-czech.common" name="dmd-czech common python modules" version="1.0" provider-name="Jiri Vyhnalek">
+<addon id="script.module.dmd-czech.common" name="dmd-czech common python modules" version="1.1" provider-name="Jiri Vyhnalek">
   <requires>
     <import addon="xbmc.python" version="2.0" />
   </requires>
